[package]
name = "pixelize-rust"
version = "0.2.0"
edition = "2021"
authors = ["Jongkook Choi <jongkook90@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# https://github.com/twistedfall/opencv-rust/issues/364
# https://github.com/microsoft/onnxruntime/issues/8555

[dependencies]
image = "0.24.5"
onnxruntime = "0.0.14"
ndarray = "0.15.1"
num_cpus = "1.0"
gif = "0.12.0"
png = "0.17.7"
pngchat = "1.0.1"
